# QtSubProcessLaunch

LauncherApp/: .gitignore  CMakeLists.txt  CertificateGenerator.cpp  CertificateGenerator.h  Engine.cpp  Engine.h  HttpRequest.cpp  HttpRequest.h  MainWindow.cpp  MainWindow.h  main.cpp
Service/: .gitignore  Makefile  go.mod  main.go
